<resources>
    <string name="app_name">GradeUp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde</string>
    <string name="subject_title">Titulo da matéria</string>
    <string name="registration">Matrícula</string>
    <string name="search">Pesquisar...</string>
    <string name="classes_offered">Turmas ofertadas</string>
    <string name="course">Curso</string>
    <string name="campus">Campus</string>
    <string name="vacancies">N vagas</string>

    <string name="bacharelado_ciencia_tecnologia">Bacharelado em Ciência e Tecnologia</string>
    <string name="tag_bacharelado_ciencia_tecnologia">BACHARELADO EM CIÊNCIA E TECNOLOGIA</string>

    <string name="bacharelado_biotecnologia">Bacharelado em Biotecnologia</string>
    <string name="tag_bacharelado_biotecnologia">BACHARELADO EM BIOTECNOLOGIA</string>

    <string name="bacharelado_ciencia_computacao">Bacharelado em Ciência da Computação</string>
    <string name="tag_bacharelado_ciencia_computacao">BACHARELADO EM CIÊNCIA DA COMPUTAÇÃO</string>

    <string name="bacharelado_ciencia_dados">Bacharelado em Ciência de Dados</string>
    <string name="tag_bacharelado_ciencia_dados">BACHARELADO EM CIÊNCIA DE DADOS</string>

    <string name="bacharelado_ciencias_biologicas">Bacharelado em Ciências Biológicas</string>
    <string name="tag_bacharelado_ciencias_biologicas">BACHARELADO EM CIÊNCIAS BIOLÓGICAS</string>

    <string name="bacharelado_engenharia_aeroespacial">Bacharelado em Engenharia Aeroespacial</string>
    <string name="tag_bacharelado_engenharia_aeroespacial">BACHARELADO EM ENGENHARIA AEROESPACIAL</string>

    <string name="bacharelado_engenharia_ambiental_urbana">Bacharelado em Engenharia Ambiental e Urbana</string>
    <string name="tag_bacharelado_engenharia_ambiental_urbana">BACHARELADO EM ENGENHARIA AMBIENTAL E URBANA</string>

    <string name="bacharelado_engenharia_biomedica">Bacharelado em Engenharia Biomédica</string>
    <string name="tag_bacharelado_engenharia_biomedica">BACHARELADO EM ENGENHARIA BIOMÉDICA</string>

    <string name="bacharelado_engenharia_informacao">Bacharelado em Engenharia da Informação</string>
    <string name="tag_bacharelado_engenharia_informacao">BACHARELADO EM ENGENHARIA DA INFORMAÇÃO</string>

    <string name="bacharelado_engenharia_energia">Bacharelado em Engenharia de Energia</string>
    <string name="tag_bacharelado_engenharia_energia">BACHARELADO EM ENGENHARIA DE ENERGIA</string>

    <string name="bacharelado_engenharia_gestao">Bacharelado em Engenharia de Gestão</string>
    <string name="tag_bacharelado_engenharia_gestao">BACHARELADO EM ENGENHARIA DE GESTÃO</string>

    <string name="bacharelado_engenharia_automacao_robotica">Bacharelado em Engenharia de Instrumentação, Automação e Robótica</string>
    <string name="tag_bacharelado_engenharia_automacao_robotica">BACHARELADO EM ENGENHARIA DE INSTRUMENTAÇÃO, AUTOMAÇÃO E ROBÓTICA</string>

    <string name="bacharelado_engenharia_materiais">Bacharelado em Engenharia de Materiais</string>
    <string name="tag_bacharelado_engenharia_materiais">BACHARELADO EM ENGENHARIA DE MATERIAIS</string>

    <string name="bacharelado_fisica">Bacharelado em Física</string>
    <string name="tag_bacharelado_fisica">BACHARELADO EM FÍSICA</string>

    <string name="bacharelado_matematica">Bacharelado em Matemática</string>
    <string name="tag_bacharelado_matematica">BACHARELADO EM MATEMÁTICA</string>

    <string name="bacharelado_neurociencia">Bacharelado em Neurociência</string>
    <string name="tag_bacharelado_neurociencia">BACHARELADO EM NEUROCIÊNCIA</string>

    <string name="bacharelado_quimica">Bacharelado em Química</string>
    <string name="tag_bacharelado_quimica">BACHARELADO EM QUÍMICA</string>


    <string name="bacharelado_ciencias_humanidades">Bacharelado em Ciências e Humanidades</string>
    <string name="tag_bacharelado_ciencias_humanidades">BACHARELADO EM CIÊNCIAS E HUMANIDADES</string>

    <string name="bacharelado_ciencias_economicas">Bacharelado em Ciências Econômicas</string>
    <string name="tag_bacharelado_ciencias_economicas">BACHARELADO EM CIÊNCIAS ECONÔMICAS</string>

    <string name="bacharelado_filosofia">Bacharelado em Filosofia</string>
    <string name="tag_bacharelado_filosofia">BACHARELADO EM FILOSOFIA</string>

    <string name="bacharelado_planejamento_territorial">Bacharelado em Planejamento Territorial</string>
    <string name="tag_bacharelado_planejamento_territorial">BACHARELADO EM PLANEJAMENTO TERRITORIAL</string>

    <string name="bacharelado_politicas_publicas">Bacharelado em Políticas Públicas</string>
    <string name="tag_bacharelado_politicas_publicas">BACHARELADO EM POLÍTICAS PÚBLICAS</string>

    <string name="bacharelado_relacoes_internacionais">Bacharelado em Relações Internacionais</string>
    <string name="tag_bacharelado_relacoes_internacionais">BACHARELADO EM RELAÇÕES INTERNACIONAIS</string>


    <string name="licenciatura_ciencias_humanas">Licenciatura em Ciências Humanas</string>
    <string name="tag_licenciatura_ciencias_humanas">LICENCIATURA EM CIÊNCIAS HUMANAS</string>

    <string name="licenciatura_filosofia">Licenciatura em Filosofia</string>
    <string name="tag_licenciatura_filosofia">LICENCIATURA EM FILOSOFIA</string>

    <string name="licenciatura_historia">Licenciatura em História</string>
    <string name="tag_licenciatura_historia">LICENCIATURA EM HISTÓRIA</string>


    <string name="licenciatura_ciencias_naturais_exatas">Licenciatura em Ciências Naturais e Exatas</string>
    <string name="tag_licenciatura_ciencias_naturais_exatas">LICENCIATURA EM CIÊNCIAS NATURAIS E EXATAS</string>

    <string name="licenciatura_ciencias_biologicas">Licenciatura em Ciências Biológicas</string>
    <string name="tag_licenciatura_ciencias_biologicas">LICENCIATURA EM CIÊNCIAS BIOLÓGICAS</string>

    <string name="licenciatura_fisica">Licenciatura em Física</string>
    <string name="tag_licenciatura_fisica">LICENCIATURA EM FÍSICA</string>

    <string name="licenciatura_matematica">Licenciatura em Matemática</string>
    <string name="tag_licenciatura_matematica">LICENCIATURA EM MATEMÁTICA</string>

    <string name="licenciatura_quimica">Licenciatura em Química</string>
    <string name="tag_licenciatura_quimica">LICENCIATURA EM QUÍMICA</string>





    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="theory">TEORIA: </string>
    <string name="practice">PRÁTICA: </string>
    <string name="Schedules">Horarios</string>
    <string name="filters">Filtros</string>
    <string name="campus_sa">Santo André</string>
    <string name="campus_sb">São bernardo</string>
    <string name="shift">Turno</string>
    <string name="morning">Diurno</string>
    <string name="night">Noturno</string>

</resources>